--- a/project/Worldcup-2026.html
+++ b/project/Worldcup-2026.html
@@ -80,7 +80,7 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front" id="CAF">
-                        <img src="images/CAF logo.png" alt="CAF logo">
+                        <img src="images/CAF-logo.png" alt="CAF logo">
                     </div>
                     <div class="card-back">
                         <ul>
@@ -94,7 +94,7 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front" id="CONCACAF">
-                        <img src="images/CONCACAF logo.png" alt="CONCACAF logo">
+                        <img src="images/CONCACAF-logo.png" alt="CONCACAF logo">
                     </div>
                     <div class="card-back">
                         <ul>
@@ -108,7 +108,7 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front" id="CONMEBOL">
-                        <img src="images/CONMEBOL logo.png" alt="CONMEBOL logo">
+                        <img src="images/CONMEBOL-logo.png" alt="CONMEBOL logo">
                     </div>
                     <div class="card-back">
                         <ul>
@@ -125,7 +125,7 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front" id="OFC">
-                        <img src="images/OFC logo.png" alt="OFC logo">
+                        <img src="images/OFC-logo.png" alt="OFC logo">
                     </div>
                     <div class="card-back">
                         <ul>
@@ -210,43 +210,43 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr id="blue">
+                    <tr class="blue">
                         <td>Lionel Messi</td>
                         <td>Argentina</td>
                     </tr>
-                    <tr id="green">
+                    <tr class="green">
                         <td>Cristiano Ronaldo</td>
                         <td>Portugal</td>
                     </tr>
-                    <tr id="red">
+                    <tr class="red">
                         <td>Robert Lewandowski</td>
                         <td>Poland</td>
                     </tr>
-                    <tr id="red">
+                    <tr class="red">
                         <td>Manuel Neuer</td>
                         <td>Germany</td>
                     </tr>
-                    <tr id="blue">
+                    <tr class="blue">
                         <td>Luka Modric</td>
                         <td>Croatia</td>
                     </tr>
-                    <tr id="blue">
+                    <tr class="blue">
                         <td>Kylian Mbappé</td>
                         <td>France</td>
                     </tr>
-                    <tr id="green">
+                    <tr class="green">
                         <td>Erling Haaland</td>
                         <td>Norway</td>
                     </tr>
-                    <tr id="green">
+                    <tr class="green">
                         <td>Jude Bellingham</td>
                         <td>England</td>
                     </tr>
-                    <tr id="red">
+                    <tr class="red">
                         <td>Pedri</td>
                         <td>Spain</td>
                     </tr>
-                    <tr id="red">
+                    <tr class="red">
                         <td>Lamine Yamal</td>
                         <td>Spain</td>
                     </tr>
